--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Permalinks
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
-permalink:           pretty
+# permalink:           pretty
 # relative_permalinks: true
 
 # Setup
 title:               Julian Feliciano
 tagline:             'software developer & happy person!'
 description:         'Currently attending the Turing School of Software &amp; Design. Hit me up on twitter (<a href="https://twitter.com/julsfelic" target="_blank">@julsfelic</a>) if you wanna talk code, music &amp; watches.'
-url:                 http://lanyon.getpoole.com
+url:                 http://julsfelic.github.com
 baseurl:             ''
 paginate:            5
 
